--- a/index.html
+++ b/index.html
@@ -1,6 +1,52 @@
 <html>
-  <head></head>
+  <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+	<title>Erik's Advent Calendar</title>
+
+	<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+	
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
   <body>
-    Jojo!
+    <div class="content">
+      <h1>Erik's Advent Calendar</h1>
+      <!-- <div class="row"> -->
+      	<a href="http://www.eriksvedang.com"><div class="flap open-1"><span class="label">Spacey</span></div></a>
+      	<a href="http://www.eriksvedang.com"><div class="flap open-2"><span class="label">Mr Space pants</span></div></a>
+      	<div class="flap">3.</div>
+      	<div class="flap">4.</div>
+      	<div class="flap">5.</div>
+      	<div class="flap">6.</div>
+      <!-- </div> -->
+      <!-- <div class="row"> -->
+      	<div class="flap">7.</div>
+      	<div class="flap">8.</div>
+	<div class="flap">9.</div>
+	<div class="flap">10.</div>
+	<div class="flap">11.</div>
+	<div class="flap">12.</div>
+      <!-- </div> -->
+      <!-- <div class="row"> -->
+	<div class="flap">13.</div>
+	<div class="flap">14.</div>
+	<div class="flap">15.</div>
+	<div class="flap">16.</div>
+	<div class="flap">17.</div>
+	<div class="flap">18.</div>
+      <!-- </div> -->
+      <!-- <div class="row"> -->
+	<div class="flap">19.</div>
+	<div class="flap">20.</div>
+	<div class="flap">21.</div>
+	<div class="flap">22.</div>
+	<div class="flap">23.</div>
+	<div class="flap">24.</div>
+      <!-- </div> -->
+    </div>
   </body>
 </html>
