--- a/0/space.html
+++ b/0/space.html
@@ -21,7 +21,7 @@
     <meta charset="ISO-8859-1">
   </head>
   <body>
-    <p>By Erik Sved&auml;ng</p>
+    <p>By Erik Svedäng</p>
     <canvas id="quilts"></canvas>
   </body>
 </html>
