--- a/0/space.html
+++ b/0/space.html
@@ -18,10 +18,10 @@
       font-size: 0.7em;
       }
     </style>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
   </head>
   <body>
-    <p>By Erik Svedäng</p>
+    <p>By Erik SvedÃ¤ng</p>
     <canvas id="quilts"></canvas>
   </body>
 </html>
