--- a/0/space.html
+++ b/0/space.html
@@ -10,18 +10,40 @@
       padding-right: 0;
       margin-left: auto;
       margin-right: auto;
-      margin-top: 150px;
+      margin-top: 250px;
+      margin-bottom: 250px;
       display: block;
+      }
+      h2 {
+      font-family: sans-serif;
+      color: #FF3F60;
       }
       p {
       font-family: sans-serif;
-      font-size: 0.7em;
+      font-size: 1.0em;
+      color: #999;
+      }
+      body {
+      padding: 0px;
+      margin: 0px;
+      }
+      .about {
+      margin: 0px;
+      background-color: #EEE;
+      padding: 3em;
+      bottom: 0px;
+      <!-- width: 100%; -->
+      <!-- position: absolute; -->
       }
     </style>
     <meta charset="UTF-8">
   </head>
   <body>
-    <p>By Erik Svedäng</p>
     <canvas id="quilts"></canvas>
+    <div class="about">
+      <h2>Tiny Spaceship</h2>
+      <p>By Erik Svedäng</p>
+      <p>This sketch was made using the graphics library Quil for Clojure and Clojurescript.
+    </div>
   </body>
 </html>
