--- a/0/space.html
+++ b/0/space.html
@@ -4,38 +4,9 @@
     <title>Tiny Spaceship</title>
     <script src="js/main.js"></script>
     <script type='text/javascript' id='lt_ws' src='http://localhost:60793/socket.io/lighttable/ws.js'></script>
-    <style>
-      canvas {
-      padding-left: 0;
-      padding-right: 0;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 250px;
-      margin-bottom: 250px;
-      display: block;
-      }
-      h2 {
-      font-family: sans-serif;
-      color: #FF3F60;
-      }
-      p {
-      font-family: sans-serif;
-      font-size: 1.0em;
-      color: #999;
-      }
-      body {
-      padding: 0px;
-      margin: 0px;
-      }
-      .about {
-      margin: 0px;
-      background-color: #EEE;
-      padding: 3em;
-      bottom: 0px;
-      <!-- width: 100%; -->
-      <!-- position: absolute; -->
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../normalize.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
   </head>
   <body>
