--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="flap"><p>3.</p></div>
       <div class="flap"><p>11.</p></div>
 
-      <a href="/0/space.html">
+      <a href="/Advent/0/space.html">
       	<div class="flap" style="background-image: url('img/ship.png');">
       	  <span class="label">1. Tiny Spaceship</span>
       	</div>
