--- a/1/Wave.html
+++ b/1/Wave.html
@@ -6,5 +6,8 @@ layout: base
 <canvas class="narrow" id="quilts"></canvas>
 <div class="about">
   <h2>Great Waves</h2>
-  <p>By Erik Svedäng</p>
+  <p class="credits">Erik Svedäng</p>
+  <p>
+    A generative animation.
+  </p>
 </div>
