--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="flap"><p>3.</p></div>
       <div class="flap"><p>11.</p></div>
 
-      <a href="{{site.baseurl}}/Advent/1/Wave.html">
+      <a href="1/Wave.html">
       	<div class="flap" style="background-image: url('img/wave.png');">
       	  <span class="label">1. Great Waves</span>
       	</div>
