--- a/1/Wave.html
+++ b/1/Wave.html
@@ -1,13 +1,9 @@
 ---
 title: Great Waves
 layout: base
+material: Generative animation / Quil
+blurb: 
 ---
 
 <canvas class="narrow" id="quilts"></canvas>
-<div class="about">
-  <h2>Great Waves</h2>
-  <p class="credits">Erik Svedäng</p>
-  <p>
-    A generative animation.
-  </p>
-</div>
+
