--- a/index.html
+++ b/index.html
@@ -50,5 +50,11 @@
       <div class="flap"><p>19.</p></div>
       
     </div>
+
+    <a title="Web Analytics" href="http://clicky.com/100794748"><img alt="Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+    <script src="//static.getclicky.com/js" type="text/javascript"></script>
+    <script type="text/javascript">try{ clicky.init(100794748); }catch(e){}</script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100794748ns.gif" /></p></noscript>
+
   </body>
 </html>
