--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
     
-    <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/normalize.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/styles.css">
   </head>
   <body>
     <div class="content">
@@ -26,8 +26,8 @@
       <div class="flap"><p>3.</p></div>
       <div class="flap"><p>11.</p></div>
 
-      <a href="1/Wave.html">
-      	<div class="flap" style="background-image: url('img/wave.png');">
+      <a href="{{ site.baseurl }}/1/Wave.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/wave.png');">
       	  <span class="label">1. Great Waves</span>
       	</div>
       </a>
