--- a/1/Wave.html
+++ b/1/Wave.html
@@ -5,5 +5,5 @@ material: Generative animation / Quil
 blurb: 
 ---
 
-<canvas id="quilts"></canvas>
+<canvas style="max-width: 1100px;" id="quilts"></canvas>
 
