--- a/2/Song.html
+++ b/2/Song.html
@@ -4,6 +4,7 @@ layout: base
 material: Music
 ---
 
+<img class="song-cover" src="NoBallons.jpg">
 <audio controls>
   <source src="Svang.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
