--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
       <div class="flap"><p>10.</p></div>
       <div class="flap"><p>5.</p></div>
       <div class="flap"><p>17.</p></div>
-      <div class="flap"><p>2.</p></div>
+
+      <a href="{{ site.baseurl }}/2/Song.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/ballon.png');">
+      	  <span class="label">1. Great Waves</span>
+      	</div>
+      </a>
+      
       <div class="flap"><p>19.</p></div>
       
     </div>
