--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <a href="{{ site.baseurl }}/2/Song.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/ballon.png');">
-      	  <span class="label">1. Great Waves</span>
+      	  <span class="label">2. Sväng</span>
       	</div>
       </a>
       
