--- a/1/Wave.html
+++ b/1/Wave.html
@@ -7,3 +7,7 @@ blurb:
 
 <canvas style="max-width: 1100px;" id="quilts"></canvas>
 
+<audio style="display:none;" controls autoplay>
+  <source src="horse.mp3" type="audio/mpeg">
+</audio>
+
