--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
       <div class="flap"><p>21.</p></div>
       <div class="flap"><p>14.</p></div>
       <div class="flap"><p>24.</p></div>
-      <div class="flap"><p>3.</p></div>
+
+      <a href="{{ site.baseurl }}/3/SpaceshipA.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/spaceshipA.png');">
+      	  <span class="label">3. Spaceship A</span>
+      	</div>
+      </a>
+      
       <div class="flap"><p>11.</p></div>
 
       <a href="{{ site.baseurl }}/1/Wave.html">
