--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
       </a>
 	    
       <div class="flap"><p>13.</p></div>
-      <div class="flap"><p>6.</p></div>
+
+      <a href="{{ site.baseurl }}/6/Dancer.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/dancer.png');">
+      	  <span class="label">6. Dancer</span>
+      	</div>
+      </a>
+      
       <div class="flap"><p>12.</p></div>
       <div class="flap"><p>8.</p></div>
       <div class="flap"><p>23.</p></div>
