--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
       <h1>Erik Svedäng's Advent Calendar 2014</h1>
       
       <!-- style="background-image: url('img/def.jpeg');" -->
-      <div class="flap"><p>7.</p></div>
+
+      <a href="{{ site.baseurl }}/7/Song.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/tail.png');">
+      	  <span class="label">7. Turn Tail</span>
+      	</div>
+      </a>
 
       <div class="flap"><p>17.</p></div>
       
