--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
       <div class="flap"><p>23.</p></div>
       <div class="flap"><p>20.</p></div>
       <div class="flap"><p>16.</p></div>
-      <div class="flap"><p>9.</p></div>
+
+      <a href="{{ site.baseurl }}/9/Icon.html">
+	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/icon.png');">
+      	  <span class="label">9. 1c0n</span>
+      	</div>
+      </a>
+      
       <div class="flap"><p>18.</p></div>
 
       <a href="{{ site.baseurl }}/4/Genesis.html">
