--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>12.</p></div>
+      <a href="{{ site.baseurl }}/12/Nanoscopic.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/tiny.png');">
+      	  <span class="label">12. Nanoscopic</span>
+      	</div>
+      </a>
 
       <div class="flap"><p>13.</p></div>
       
