--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       	</div>
       </a>
 
-      <div class="flap"><p>13.</p></div>
+      <div class="flap"><p>15.</p></div>
       
       <div class="flap"><p>23.</p></div>
       <div class="flap"><p>20.</p></div>
@@ -96,7 +96,11 @@
       	</div>
       </a>      
       
-      <div class="flap"><p>15.</p></div>
+      <a href="{{ site.baseurl }}/13/TrainWindow.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/train.png');">
+      	  <span class="label">13. Train Window</span>
+      	</div>
+      </a>
 
       <a href="{{ site.baseurl }}/5/Fears.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/fears.png');">
