--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
       <div class="flap"><p>17.</p></div>
       
       <div class="flap"><p>21.</p></div>
-      <div class="flap"><p>14.</p></div>
+
+      <a href="{{ site.baseurl }}/14/Gate.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/gate.png');">
+      	  <span class="label">14. Gate</span>
+      	</div>
+      </a>
+      
       <div class="flap"><p>24.</p></div>
 
       <a href="{{ site.baseurl }}/3/SpaceshipA.html">
