--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
       	</div>
       </a>
 
-      <div class="flap"><p>15.</p></div>
+      <a href="{{ site.baseurl }}/15/Emerald.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/emerald.png');">
+      	  <span class="label">15. Emerald</span>
+      	</div>
+      </a>
       
       <div class="flap"><p>23.</p></div>
       <div class="flap"><p>20.</p></div>
