Lucka 16 is go.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
       	</div>
       </a>
 
-      <div class="flap"><p>16.</p></div>
+      <a href="{{ site.baseurl }}/16/SpaceshipB.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/spaceshipB.png');">
+      	  <span class="label">16. Spaceship B</span>
+      	</div>
+      </a>
      
       <a href="{{ site.baseurl }}/1/Wave.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/wave.png');">
