--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       	</div>
       </a>
 
-      <div class="flap"><p>17.</p></div>
+      <a href="{{ site.baseurl }}/17/Glimmer.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/glimmer.png');">
+      	  <span class="label">17. Glimmer</span>
+      	</div>
+      </a>
       
       <div class="flap"><p>21.</p></div>
 
