--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>18.</p></div>
+      <a href="{{ site.baseurl }}/18/Hyper.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/hyper.png');">
+      	  <span class="label">18. Hyper</span>
+      	</div>
+      </a>
 
       <a href="{{ site.baseurl }}/4/Genesis.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/genesis.png');">
