--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>19.</p></div>
-      <!-- <a href="{{ site.baseurl }}/19/Gang.html"> -->
-      <!-- 	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/gang.png');"> -->
-      <!-- 	  <span class="label">19. Gang</span> -->
-      <!-- 	</div> -->
-      <!-- </a> -->
+      <a href="{{ site.baseurl }}/19/Gang.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/gang.png');">
+      	  <span class="label">19. Gang</span>
+      	</div>
+      </a>
       
     </div>
 
