--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
       </a>
       
       <div class="flap"><p>23.</p></div>
-      <div class="flap"><p>20.</p></div>
+
+      <a href="{{ site.baseurl }}/20/Eye.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/eye.png');">
+      	  <span class="label">20. Eye</span>
+      	</div>
+      </a>
       
       <a href="{{ site.baseurl }}/11/Runes.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/runes.png');">
