--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>21.</p></div>
+      <a href="{{ site.baseurl }}/21/Race.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/race.png');">
+      	  <span class="label">21. Race</span>
+      	</div>
+      </a>
 
       <a href="{{ site.baseurl }}/14/Gate.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/gate.png');">
