--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>22.</p></div>
+      <a href="{{ site.baseurl }}/22/Mer.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/mer.png');">
+      	  <span class="label">22. Mer</span>
+      	</div>
+      </a>
 
       <a href="{{ site.baseurl }}/10/Flock.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/flock.png');">
