--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>23.</p></div>
+      <a href="{{ site.baseurl }}/23/DryPaint.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/drypaint.png');">
+      	  <span class="label">23. Dry Paint</span>
+      	</div>
+      </a>
 
       <a href="{{ site.baseurl }}/20/Eye.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/eye.png');">
