green snow! 24... DONE!!! =)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
       	</div>
       </a>
       
-      <div class="flap"><p>24.</p></div>
+      <a href="{{ site.baseurl }}/24/GreenSnow.html">
+      	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/green.png');">
+      	  <span class="label">24. Green Snow</span>
+      	</div>
+      </a>
 
       <a href="{{ site.baseurl }}/3/SpaceshipA.html">
       	<div class="flap" style="background-image: url('{{ site.baseurl }}/img/spaceshipA.png');">
